--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "description": "Extract switch playtime from the Switch Parental Controls app",
     "main": "index.js",
     "types": "index.d.ts",
+    "bin": "bin/switch-tracker",
     "repository": "git@github.com:andreterron/switch-tracker.git",
     "author": "Andre Terron <git@terron.me>",
     "license": "MIT",
     "private": false,
     "files": [
         "index.js",
-        "index.d.ts"
+        "index.d.ts",
+        "bin/switch-tracker"
     ],
     "scripts": {
         "build": "tsc"
@@ -20,6 +22,7 @@
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "arg": "^5.0.0",
         "fontoxpath": "^3.14.2",
         "slimdom": "^2.3.2",
         "slimdom-sax-parser": "^1.4.0"
